--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,8 +1,13 @@
 {
     "browse_secrets": {"message": "Browse secrets"},
+    "authentication": {"message": "Authentication"},
+    "userpass": {"message": "Userpass"},
+    "ldap": {"message": "LDAP"},
     "vault_url": {"message": "Vault URL"},
-    "ldap_user": {"message": "LDAP username"},
-    "ldap_password": {"message": "LDAP password"},
+    "ldap_user": {"message": "Username"},
+    "ldap_password": {"message": "Password"},
+    "secret_notfound": {"message": "No secret found for "},
+    "secret_found": {"message": "Secrets found for "},
     "login": {"message": "Log in"},
     "logout": {"message": "Log out"},
     "logged_out": {"message": "Logged out"},
