--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1,13 +1,18 @@
 {
     "browse_secrets": {"message": "Parcourir les secrets"},
+    "authentication": {"message": "Authentification"},
+    "userpass": {"message": "Compte local"},
+    "ldap": {"message": "LDAP"},
     "vault_url": {"message": "URL Vault"},
-    "ldap_user": {"message": "Nom d'utilisateur LDAP"},
-    "ldap_password": {"message": "Mot de passe LDAP"},
+    "ldap_user": {"message": "Nom d'utilisateur"},
+    "ldap_password": {"message": "Mot de passe"},
     "login": {"message": "Se connecter"},
     "logout": {"message": "Se déconnecter"},
     "logged_out": {"message": "Déconnecté"},
     "login_failure": {"message": "Erreur de connexion"},
     "fill_all_fields": {"message": "Certains champs sont vides"},
+    "secret_notfound": {"message": "Aucun secret trouvé pour "},
+    "secret_found": {"message": "Secrets trouvés pour "},
     "getting_backends_failure": {"message": "Erreur en récupérant les répertoires de travail"},
     "backends_list": {"message": "Répertoires de travail"},
     "private_directory": {"message": "Répertoire privé"},
